--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Montez&family=Moon+Dance&family=Sacramento&display=swap"
         rel="stylesheet">
     <title>Ankur Rawat</title>
@@ -20,11 +20,11 @@
             <h1 class="intro-h">I am Ankur.</h1>
             <p class="intro-p">a <span id="pro">pro</span>grammer.</p>
         </div>
-        <img src="/images/mountain.png" alt="" class="mountain_img">
+        <img src="images/mountain.png" alt="" class="mountain_img">
     </div>
     <div id="mid_container">
         <div class="profile_pic">
-            <img src="/images/profile_pic.png" alt="profile_pic">
+            <img src="images/profile_pic.png" alt="profile_pic">
             <h2>Kon'nichiwa</h2>
             <p>I am Currently a student in Maharaja Agrasen Institute of Technology, I 💖 Programming and watching Anime</p>
         </div>
@@ -32,17 +32,17 @@
         <div class="skills">
             <h2 class="skills">My Skills</h2>
             <div class="skill-row">
-                <img src="/images/python.png" alt="python" class="python_img">
+                <img src="images/python.png" alt="python" class="python_img">
                 <h3>Python</h3>
                 <p>"⭐️⭐️⭐️⭐️⭐️" I am an Expert in Python, and Know some of its most used libraries like: - Selenium, pandas, Pygame, MatPlotLib, Flask etc, I also have done many projects in Python, <a href="" class="certficate">My Certificate's.</a></p>
             </div>
             <div class="skill-row">
-                <img src="/images/web_development.png" alt="WebDevelopment" class="web_dev_img">
+                <img src="images/web_development.png" alt="WebDevelopment" class="web_dev_img">
                 <h3>Web Development</h3>
                 <p>"⭐️⭐️⭐️⭐️"I Just Started to learn WebDevelopment with the Help of JavaScript, HTML, CSS. My strongest point is HTML, then JS and then CSS, I am Currently Learning Web Development, <a href="" class="certficate">My Certificate's.</a></p>
             </div>
             <div class="skill-row">
-                <img src="/images/cpp.png" alt="C++" class="cpp_img">
+                <img src="images/cpp.png" alt="C++" class="cpp_img">
                 <h3>C++/DSA</h3>
                 <p>"⭐️⭐️⭐️⭐️"I do DSA questions every weekend, and take part on almost every Leetcode contest, I have a better knowledge of Oops's Concepts and C++ Language.</p>
             </div>
